log

Thu 14 Mar 2024 08:27:28 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
017ca6f
Thu 14 Mar 2024 08:27:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
36d4d78
Thu 14 Mar 2024 08:34:49 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
38528ab
Thu 14 Mar 2024 08:36:35 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|7
total_score: 0/70
947159e
Thu 14 Mar 2024 08:40:02 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 10/70
290fa70
Thu 14 Mar 2024 08:46:09 PM UTC: 
 exercises.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:7: error: variable ‘temporal’ set but not used [-Werror=unused-but-set-variable]
   33 |   int temporal;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
da0d291
